# ccos

./: .gitattributes  .gitignore  APPLY_PHASE_FIX.md  BEFORE_AFTER_COMPARISON.md  CAPABILITY_EXECUTION_MISSING_BEHAVIOR.md  CAPABILITY_TYPE_FIX.md  CHANGELOG.md  CLAUDE.md  CONFIG_UPDATE_SUMMARY.md  Cargo.toml  DOCUMENTATION_SYNC_REPORT.md  DYNAMIC_DEMO_USAGE.md  DYNAMIC_KEYWORD_EXTRACTION.md  Dockerfile.debian  Dockerfile.tiny  EXAMPLES_MIGRATION.md  GOAL_EXAMPLES.md  HUMAN_PARTNER_DISCLAIMER.md  IMPLEMENTATION_REASONING.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_FINDINGS.md  ISSUE_151_ANALYSIS_REPORT.md  ISSUE_161_AUDIT_REPORT.md  ISSUE_RTFS_STABILITY.md  ISSUE_STREAMING_ROADMAP.md  LEARNING_FLOW_DIAGRAM.txt  LET_BINDING_FIX.md  LICENSE  MANUAL_CLOSURE_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  PR_CHECKLIST.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  README_ISSUE_CLOSURE.md  REBASE_COMPATIBILITY_ISSUE.md  RTFS_PRIMITIVE_TYPES_CLARIFICATION.md  RTFS_SPEC_SYNTAX_ERROR.md  RTFS_TYPE_SYNTAX_ANALYSIS.md  (+41 more)
autonoetic/: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  cli_interface.md  concepts.md  data_models.md  plan.md  plan_adapt.md  plan_approval_response_details.md  plan_content_storage.md  plan_extended.md  plan_signal.md  plan_skill_proposal.md  plan_workflow_orchestration.md  plan_workflow_update.md  protocols.md  run-gateway.sh  sandbox_sdk.md
autonoetic/agents/: README.md
autonoetic/autonoetic/: Cargo.toml
autonoetic/autonoetic-gateway/: Cargo.toml
autonoetic/autonoetic-mcp/: Cargo.toml
autonoetic/autonoetic-ofp/: Cargo.toml
autonoetic/autonoetic-types/: Cargo.toml
autonoetic/docs/: AGENTS.md  ARCHITECTURE.md  CLI.md  MODULES.md  adaptation-composition-model.md  agent-adapter-specialist.md  agent-capabilities.md  agent-clarification-protocol.md  agent-features.md  agent-install-approval-retry.md  agent_routing_and_roles.md  approval-notification-delivery.md  approved-resources-caching.md  architecture-summary.md  budget-management.md  cli-reference.md  code-analysis.md  comparison-hermes-agent.md  content-store.md  gateway-architecture-principles.md  iteration-repair-validation-runbook.md  promotion-strategy.md  quickstart-planner-specialist-chat.md  remote-access-approval.md  remote-agents-http-api.md  schema-enforcement-hook.md  separation-of-powers.md  session-budget.md  tool-skill-repository-design.md  workflow-orchestration.md
autonoetic/smoke/: config.yaml
ccos/: Cargo.toml  all_errors.txt  run_demo.sh  test_invalid_skill.md  test_norm.txt  test_puppeteer_plan.rtfs  verify_fixes.py
ccos-agent/: Cargo.toml
ccos-chat-cli/: Cargo.toml
ccos-chat-cli/src/: main.rs
ccos-gateway/: Cargo.toml
ccos-gateway/src/: main.rs
ccos/benches/: capability_execution.rs
ccos/examples/: README.md  autonomous_agent.rtfs  autonomous_agent_demo.rs  capability_explorer.rs  ccos_demo.rs  ccos_runtime_service_demo.rs  ccos_tui_demo.rs  comprehensive_demo.rs  constitution.rtfs  context_types_demo.rs  dump_intents.rs  execute_capability.rs  generalized_primitives_demo.rs  governance_hints_demo.rtfs  governance_rtfs_demo.rs  hierarchical_context_demo.rs  llm_arbiter_example.rs  mcp_discovery_demo.rs  missing_capability_demo.rs  modular_planner_demo.rs  openweathermap.toml  rtfs_capability_demo.rs  sandboxed_script_demo.rs  semantic_judge_demo.rs  show_architecture.rs  single_mcp_discovery.rs  smart_assistant_demo.rs  smart_assistant_demo_v1.rs  smart_assistant_planner_viz.rs  synthesis_test.rs  test_approval_workflow.rs  test_capability_matching.rs  test_local_embedding.rs  test_mcp_discovery.rs  test_mcp_discovery_direct.rs  test_missing_capability_interactive.rs  test_missing_capability_resolution.rs  test_npm_search.rs  test_puppeteer_search.rs  test_resend_introspect.rs  (+2 more)
ccos/src/: adaptive_threshold.rs  arbiter_factory.rs  archivable_types.rs  ccos_core.rs  checkpoint_archive.rs  context_horizon.rs  delegation.rs  delegation_l4.rs  dummy_arbiter.rs  environment.rs  event_sink.rs  execution_context.rs  governance_judge.rs  governance_kernel.rs  host.rs  integration_test.rs  intent_archive.rs  intent_storage.rs  lib.rs  loaders.rs  local_models.rs  mod.rs  orchestrator.rs  plan_archive.rs  planner_viz_common.rs  prelude.rs  remote_models.rs  runtime_service.rs  security_policies.rs  state_provider.rs  storage.rs  subconscious.rs  task_protocol.rs  types.rs  utils.rs  wm_integration.rs
ccos/tests/: browser_discovery_auth_test.rs  capability_schema_tests.rs  catalog_tests.rs  chat_mode_tests.rs  discovery_refactor_test.rs  mcp_discovery_tests.rs  microvm_central_auth_tests.rs  onboarding_blueprint_integration_tests.rs  onboarding_capabilities_tests.rs  primitives_tests.rs  rtfs_normalization_tests.rs  sample_skill_e2e_test.rs  scheduler_integration_tests.rs  server_discovery_pipeline_tests.rs  session_pool_schema_validation_tests.rs  skill_test.rs  test_a2a_capability.rs  test_agent_memory_persistence.rs  test_approval_queue.rs  test_autonomous_planner.rs  (+15 more)
rtfs/: Cargo.toml
rtfs_compiler/: .rtfs_repl_history  COMPILER_PROGRESS_REPORT.md  CONSOLIDATED_TESTING_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_TRACKER.md  ISSUE_1_COMPLETION_REPORT.md  ISSUE_23_COMPLETION_REPORT.md  ISSUE_3_CCOS_RTFS_LIBRARY.md  ISSUE_3_COMPLETION_REPORT.md  ISSUE_43_IMPLEMENTATION_PLAN.md  ISSUE_4_COMPLETION_REPORT.md  ISSUE_50_COMPLETION_REPORT.md  ISSUE_53_UNIT_TEST_STABILIZATION.md  ISSUE_5_COMPLETION_REPORT.md  ISSUE_6_CAUSAL_CHAIN_EVENT_STREAM_SPEC.md  ISSUE_6_COMPLETION_REPORT.md  ISSUE_79_COMPLETION_REPORT.md  ISSUE_REMAINING_RTFS.md  MIGRATION_CHECKLIST.md  PR_DRAFT.md  README_REPL.md  REMOTE_MODELS_GUIDE.md  REMOTE_MODELS_IMPLEMENTATION_SUMMARY.md  TODO_IMPLEMENTATION_TRACKER.md  commit_message.txt  debug_closure_issue.rs  debug_complex_expression.rs  debug_defn_21  debug_defn_21.rs  debug_env_analysis.rs  debug_environment_deep.rs  debug_escape_extraction  debug_extract_test  debug_fact_function.rs  debug_let.rs  debug_let.rtfs  debug_let_env.rs  debug_let_test.rs  debug_map_destructure.rs  debug_map_test.rtfs  (+41 more)
viewer_server/: Cargo.toml  README.md
(+2497 files in other folders)
