[workspace]
members = ["rtfs", "ccos"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared dependencies that both crates might use
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
itertools = "0.12"
lazy_static = "1.4"
chrono = "0.4"
ordered-float = "3.7"
validator = { version = "0.18.1", features = ["derive"] }
schemars = "0.8.21"
toml = "0.8"
jsonschema = "0.18"
sha2 = "0.10"
wasmtime = "13"
flate2 = "1.0"
bincode = "1.3"
async-trait = "0.1"
futures = "0.3"
filetime = "0.2"
anyhow = "1.0"

