[workspace]
members = [
    "autonoetic",
    "autonoetic-gateway",
    "autonoetic-types",
    "autonoetic-ofp",
    "autonoetic-mcp"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
autonoetic-types = { path = "autonoetic-types" }
autonoetic-gateway = { path = "autonoetic-gateway" }
autonoetic-ofp = { path = "autonoetic-ofp" }
autonoetic-mcp = { path = "autonoetic-mcp" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
