[package]
name = "ccos-agent"
version.workspace = true
edition.workspace = true
description = "CCOS Agent binary - minimal dependency surface"
license.workspace = true

[[bin]]
name = "ccos-agent"
path = "src/main.rs"

[dependencies]
ccos = { path = "../ccos", default-features = false, features = ["agent-runtime"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
