[package]
name = "ccos"
version.workspace = true
edition.workspace = true
authors = ["Your Name <you@example.com>"]
description = "CCOS - Cognitive Computing Operating System"
license.workspace = true
repository = "https://github.com/yourusername/rtfs-compiler"

[dependencies]
# Core RTFS dependency
rtfs = { path = "../rtfs", features = ["pest", "regex"] }

# Shared dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
once_cell = "1.21"
chrono = { workspace = true, features = ["serde"] }
ordered-float = { workspace = true }
validator = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }
jsonschema = { workspace = true }
sha2 = { workspace = true }
serde_yaml = "0.9"
wasmtime = { workspace = true }
flate2 = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
async-recursion = "1.0"
futures = { workspace = true }
anyhow = { workspace = true }

# CCOS-specific dependencies
rusqlite = { version = "0.29", features = ["bundled"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

# Networking/API
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
base64 = { workspace = true }
url = "2.5"
atty = "0.2"

# MCP (Model Context Protocol) dependencies
reqwest-eventsource = "0.5"
eventsource-stream = "0.2"

# REPL dependencies
clap = { version = "4.0", features = ["derive", "env"] }
rustyline = { version = "13.0", optional = true }

# Utilities
indexmap = "2.0"
tempfile = "3.10"
llama_cpp = { version = "0.3.2", optional = true }
num_cpus = "1.17.0"
yansi = "1.0"

# Caching dependencies
rand = "0.8"
dashmap = "5.5"
chacha20poly1305 = "0.10"

# TUI/CLI dependencies
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
colored = "2.1"
textwrap = "0.16"
dialoguer = { version = "0.11", features = ["fuzzy-select"], optional = true }

# Web server and websockets
axum = { version = "0.7", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.23", features = ["native-tls"], optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

[features]
default = ["repl", "tui", "server"]
repl = ["dep:rustyline", "rtfs/repl"]
tui = ["dep:ratatui", "dep:crossterm", "dep:dialoguer"]
server = ["dep:axum", "dep:tokio-tungstenite", "dep:tower-http"]
llm = ["dep:llama_cpp"]
minimal = []
ccos-integration = []
cuda = []

[[bin]]
name = "ccos"
path = "src/bin/ccos.rs"

[[bin]]
name = "ccos-chat-gateway"
path = "src/bin/ccos-chat-gateway.rs"
required-features = ["server"]

[[bin]]
name = "rtfs-ccos-repl"
path = "src/bin/rtfs_ccos_repl.rs"
required-features = ["repl"]

[[bin]]
name = "github_issue_manager"
path = "src/bin/github_issue_manager.rs"

[[bin]]
name = "ccos-viewer"
path = "src/bin/ccos-viewer.rs"
required-features = ["server"]

[[bin]]
name = "diagnose_storage"
path = "src/bin/diagnose_storage.rs"

[[bin]]
name = "mcp-local-server"
path = "src/bin/legacy/mcp_local_server.rs"
required-features = ["server"]

[[bin]]
name = "ccos-explore"
path = "src/bin/ccos_explore.rs"
required-features = ["tui"]

[[bin]]
name = "resolve-deps"
path = "src/bin/resolve_deps.rs"

[[bin]]
name = "test-multi-capability-synthesis"
path = "src/bin/legacy/test_multi_capability_synthesis.rs"

[[bin]]
name = "dialogue_planner_demo"
path = "src/bin/legacy/dialogue_planner_demo.rs"

[[bin]]
name = "governance_demo"
path = "src/bin/legacy/governance_demo.rs"

[[bin]]
name = "learning_demo"
path = "src/bin/legacy/learning_demo.rs"

[[bin]]
name = "introspect_demo"
path = "src/bin/legacy/introspect_demo.rs"

[[bin]]
name = "meta_planner_test"
path = "src/bin/legacy/meta_planner_test.rs"

[[bin]]
name = "test_browser_extract"
path = "src/bin/legacy/test_browser_extract.rs"

[[bin]]
name = "check_score_existence"
path = "src/bin/legacy/check_score_existence.rs"

[[bin]]
name = "introspect_runtime_plan"
path = "src/bin/legacy/introspect_runtime_plan.rs"

[[bin]]
name = "mock-moltbook"
path = "src/bin/mock_moltbook.rs"

[[bin]]
name = "ccos-chat"
path = "src/bin/ccos-chat.rs"
required-features = ["tui"]

[[bin]]
name = "ccos-agent"
path = "src/bin/ccos_agent.rs"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
filetime = "0.2"

[build-dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

