[package]
name = "rtfs"
version.workspace = true
edition.workspace = true
authors = ["Your Name <you@example.com>"]
description = "RTFS - Runtime-First Scripting Language"
license.workspace = true
repository = "https://github.com/yourusername/rtfs-compiler"

[features]
default = ["pest", "regex"]
# Parser (pest grammar + derives)
pest = ["dep:pest", "dep:pest_derive"]
# Regex-based intent extraction & validators
regex = ["dep:regex"]
# REPL (line editing)
repl = ["dep:rustyline"]
# Local models with CUDA support
cuda = []
# New effect boundary for typed host calls - now the only way to do stateful operations
effect-boundary = []
metrics_exporter = []
benchmarks = []
ccos-integration = []

[[bin]]
name = "rtfs_compiler"
path = "src/bin/rtfs_compiler.rs"

[[bin]]
name = "rtfs-repl"
path = "src/bin/rtfs_repl.rs"
required-features = ["repl"]

[dependencies]
# Parser dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }
regex = { version = "1.10", optional = true }

# Runtime dependencies (from workspace)
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
ordered-float = { workspace = true }
validator = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }
jsonschema = { workspace = true }
sha2 = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasi-common = { workspace = true }
flate2 = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tempfile = "3.8"

# REPL dependencies (for rtfs-repl binary)
rustyline = { version = "13.0", optional = true }
clap = { version = "4.0", features = ["derive"] }

# Utilities
indexmap = "2.0"
yansi = "1.0"

# Platform-specific for non-blocking I/O
[target.'cfg(unix)'.dependencies]
libc = "0.2"

criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
wat = "1.0"
tempfile = "3.8"
filetime = "0.2"
proptest = "1.6"

[[test]]
name = "test_macros"
path = "tests/test_macros.rs"

[[test]]
name = "parser_robustness_tests"
path = "tests/robustness/parser_robustness_tests.rs"

[[test]]
name = "runtime_error_tests"
path = "tests/robustness/runtime_error_tests.rs"

[[test]]
name = "parser_fuzz_tests"
path = "tests/robustness/parser_fuzz_tests.rs"

[[test]]
name = "parser_error_format_tests"
path = "tests/robustness/parser_error_format_tests.rs"

[[test]]
name = "destructuring_runtime_tests"
path = "tests/robustness/destructuring_runtime_tests2.rs"

