[package]
name = "rtfs_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "RTFS Compiler - Runtime-First Scripting Language Compiler"
license = "MIT"
repository = "https://github.com/yourusername/rtfs-compiler"

[features]
default = ["pest", "regex", "repl"]
pest = ["dep:pest"]
regex = ["dep:regex"]
repl = ["rustyline"]
cuda = ["llama_cpp/cuda"]

[[bin]]
name = "rtfs_compiler"
path = "src/bin/rtfs_compiler.rs"

[[bin]]
name = "rtfs-repl"
path = "src/bin/rtfs_repl.rs"
required-features = ["repl"]

[dependencies]
# Parser dependencies
pest = { version = "2.7", optional = true }
pest_derive = "2.7"
regex = { version = "1.10", optional = true }

# Runtime dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
itertools = "0.12"
lazy_static = "1.4"
chrono = "0.4"
ordered-float = "3.7"
validator = { version = "0.18.1", features = ["derive"] }
schemars = "0.8.21"
toml = "0.8"

# Networking/API
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

# REPL dependencies
clap = { version = "4.0", features = ["derive"] }
rustyline = { version = "13.0", optional = true }

# Utilities
indexmap = "2.0"
sha2 = "0.10"
llama_cpp = { version = "0.3.2", optional = true }
num_cpus = "1.17.0"

# Caching dependencies
rand = "0.8"
dashmap = "5.5"

# Wasmtime dependency
wasmtime = "13"

# Flate2 dependency
flate2 = "1.0"

# Bincode dependency
bincode = "1.3"

# Async-trait dependency
async-trait = "0.1"

futures = "0.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
wat = "1.0"

[build-dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
