[package]
name = "autonoetic-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autonoetic-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
secrecy = "0.10.3"
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4.44"
async-trait = "0.1.89"
gray_matter = "0.3.2"
ed25519-dalek = "2.2.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.26.0"
