[package]
name = "autonoetic-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autonoetic-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
secrecy = "0.10.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = "0.4.44"
async-trait = "0.1.89"
gray_matter = "0.3.2"
ed25519-dalek = "2.2.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
base64 = "0.22.1"
futures = "0.3.32"
autonoetic-ofp = { version = "0.1.0", path = "../autonoetic-ofp" }
autonoetic-mcp = { version = "0.1.0", path = "../autonoetic-mcp" }
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2.6.1"
hex = "0.4.3"
regex = "1.11.2"

[dev-dependencies]
tempfile = "3.26.0"
