[package]
name = "autonoetic-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autonoetic-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest = { version = "0.13.2", features = ["json", "stream"] }
async-trait = "0.1.89"
