[package]
name = "autonoetic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autonoetic-gateway.workspace = true
autonoetic-mcp.workspace = true
autonoetic-types.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.13.2", features = ["json"] }
async-trait = "0.1.89"
dirs = "6.0.0"
uuid = { version = "1", features = ["v4"] }
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
arboard = "3.4"

[dev-dependencies]
tempfile = "3.26.0"
